# obesity

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  context.md  main.py  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
audit/: 01_baseline.py
conf/: config.yaml
data/: eda.py  obesity_dataset.csv
experiments/: 01_baseline.py  02_feature_selection.py  03_medical_complexity.py  03_medical_complexity_persist.py  04_ultimate_lean_model.py
journal/: 01_baseline.md  JOURNAL.md
obesity/: __init__.py  data.py  evaluate.py  features.py  pipeline.py  utils.py
openspec/: config.yaml
openspec/apply-progress/: 02_feature_selection.md  03_medical_complexity.md  04_ultimate_lean_model.md
openspec/changes/02_feature_selection/: apply-progress.md  tasks.md
openspec/changes/02_feature_selection/specs/: feature_selection.md
openspec/changes/archive/2026-06-23-04_ultimate_lean_model/: archive-report.md  design.md
openspec/designs/: 02_feature_selection.md  03_medical_complexity.md
openspec/specs/: 02_feature_selection.md  03_medical_complexity.md  04_ultimate_lean_model.md
openspec/tasks/: 02_feature_selection.md  03_medical_complexity.md
openspec/verify-report/: 02_feature_selection.md  03_medical_complexity.md
src/: engine.py
src/obesity/: engine.py
tests/: test_engine.py
tests/smoke/: test_01_baseline.py
