[project]
name = "obesity"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fsspec>=2026.4.0",
    "huggingface-hub>=1.19.0",
    "hydra-core>=1.3.3",
    "scikit-learn>=1.9.0",
    "tabpfn>=8.0.8",
    "torch",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "deptry>=0.25.1",
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
